create management and settings 3

--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -4,7 +4,7 @@ container_commands:
     leader_only: true
   02_createsu:
     command: "source /opt/python/run/venv/bin/activate && python src/manage.py createsu"
-  leader_only: true
+    leader_only: true
   03_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python src/manage.py collectstatic --noinput"
 
@@ -12,9 +12,10 @@ option_settings:
   "aws:elasticbeanstalk:application:environment":
     DJANGO_SETTINGS_MODULE: "uni_events.settings"
     "PYTHONPATH": "/opt/python/current/app/uni_events:$PYTHONPATH"
+    "ALLOWED_HOSTS": ".elasticbeanstalk.com"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: src/uni_events/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
-    "/static/": "www/static/"
+    "/static/": "static_cdn"
